# rift

./: .devcontainer.json  .gitignore  Cargo.toml  Makefile  README.md  build.rs
src/: base.rs  lib.rs  rift.rs  riftd.rs
src/logging/: builders.rs  config.rs  filter.rs  level.rs  mod.rs
src/rpc/: interceptor.rs  mod.rs  server.rs
