[package]
name = "rift"
version = "0.1.0"
edition = "2021"
authors = ["Christian Saide <me@csaide.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Global deps
clap = { version = "~4.0", features = ["cargo", "derive", "env"] }
exitcode = "~1.1"
futures = "~0.3"
prost = "~0.11"
prost-types = "~0.11"
slog = { version = "~2.7", features = ["nested-values"] }
slog-async = { version = "~2.7", features = ["nested-values"] }
slog-json = { version = "~2.6", features = ["nested-values"] }
slog-term = { version = "~2.9", features = ["nested-values"] }
thiserror = "~1.0"
tokio = { version = "~1.21", features = ["rt-multi-thread", "macros", "time"] }
tonic = "~0.8"
uuid = { version = "~1.2", features = ["v4"] }

# Server Only deps
signal-hook = { version = "~0.3", optional = true }
signal-hook-tokio = { version = "~0.3", features = ["futures-v0_3"], optional = true }
tonic-reflection = { version = "~0.5", optional = true }
tonic-health = { version = "~0.7", optional = true }

# UI Only deps
eframe = { version = "~0.19", optional = true }

[dev-dependencies]
rstest = "~0.15"
tokio-test = "~0.4"

[build-dependencies]
tonic-build = "~0.8"

[lib]
name = "librift"
path = "src/lib.rs"

[features]
default = ["ui", "server"]
server = ["signal-hook", "signal-hook-tokio", "tonic-reflection", "tonic-health"]
ui = ["eframe"]

[[bin]]
name = "rift"
path = "src/bin/rift.rs"
test = false
bench = false
required-features = ["ui"]

[[bin]]
name = "riftd"
path = "src/bin/riftd.rs"
test = false
bench = false
required-features = ["server"]